modules/gdscript/tests/scripts/parser/errors/invalid_escape_sequence.gd
func test():
	var escape = "invalid escape \h <- here"
